# forceops-rs

./: .gitignore  Cargo.toml  PLAN.md  README.md
.github/workflows/: ci.yml
benches/: benchmark.ps1
src/: cli.rs  config.rs  deleter.rs  elevation.rs  lib.rs  lock_checker.rs  main.rs  process.rs  utils.rs
tests/: delete_example_test.rs  file_and_directory_deleter_test.rs  list_locks_test.rs  program_test.rs
tests/common/: mod.rs  test_context.rs  test_util.rs  test_util_stdout.rs  wrapped_process.rs
