[package]
name = "fops"
version = "0.1.0"
edition = "2024"
description = "Forcefully perform file operations by terminating processes that are using the file or directory"
license = "MIT"
repository = "https://github.com/domsleee/forceops-rs"

[[bin]]
name = "fops"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
windows = { version = "0.62", features = [
    "Win32_System_RestartManager",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_Security",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

[dev-dependencies]
mockall = "0.14"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
